--- a/public/additional_styles.css
+++ b/public/additional_styles.css
@@ -29,24 +29,28 @@ button {
   border-radius: 5px;
 }
 
+button:hover {
+  background-color: rgb(0, 65, 117);
+}
+
 /*Navigation*/
 .navbar-title {
-  color: white;
-  font-family: 'Passion One', sans-serif;
+  font-family: 'Passion One';
   font-size: xx-large;
-  font-weight: bolder;
 }
 
 .navbar {
   background-color: rgb(246,52,64);
-  color:white;
-  text-decoration=none;
   vertical-align: middle;
+}
+
+.navbar a {
+  color: white !important;
+  text-decoration: none;
 }
 
 .navbar-icon {
   vertical-align: middle;
-  font-size: x-large;
 }
 
 /*Hero*/
@@ -103,7 +107,10 @@ button {
 
 .badge {
   width:200px;
-  height:60px;
+}
+
+.tagline{
+  font-size: 22px;
 }
 
 /*Why order heading*/
