--- a/public/additional_styles.css
+++ b/public/additional_styles.css
@@ -4,6 +4,9 @@
 
 td {
   border: thin red solid;
+  vertical-align: top;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .hero {
@@ -26,6 +29,29 @@ button {
 body {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
+}
+
+.navbar-a {
+  background-color: rgb(246,52,64);
+  color: white;
+  text-decoration: none;
+  vertical-align: middle;
+  font-family: 'Passion One';
+  font-size: xx-large;
+}
+
+.navbar-b {
+  background-color: rgb(246,52,64);
+  color: white;
+  text-decoration: none;
+  vertical-align: middle;
+}
+
+.navbar-c {
+  background-color: rgb(246,52,64);
+  color: white;
+  text-decoration: none;
+  vertical-align: middle;
 }
 
 .heading-row {
@@ -67,6 +93,70 @@ body {
   background-color: rgb(238, 238, 238);
 }
 
-.app-badge{
+.why-order-image {
   width: 200px;
+  border-radius: 50%;
+}
+
+.why-order-content {
+  text-align: center;
+  background-color: rgb(238, 238, 238);
+}
+
+.app-badge {
+  width: 200px;
+}
+
+.centered {
+  text-align: center;
+}
+
+.footer {
+  background-color: rgb(50, 50, 170);
+  color: white;
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.list-footer {
+  color: white;
+  margin-bottom: 10px;
+  font-weight: 200;
+}
+
+.margin-above-top-xs {
+  margin-top: 10px;
+}
+
+.margin-above-top-sm {
+  margin-top: 20px;
+}
+
+.margin-above-top-md {
+  margin-top: 50px;
+}
+
+.margin-above-top-lg {
+  margin-top: 150px;
+}
+
+.margin-below-bottom-xs {
+  margin-bottom: 10px;
+}
+
+.margin-below-bottom-sm {
+  margin-bottom: 20px;
+}
+
+.margin-below-bottom-md {
+  margin-bottom: 50px;
+}
+
+.margin-below-bottom-lg {
+  margin-bottom: 150px;
+}
+
+.margin-below-bottom-xl {
+  margin-bottom: 200px;
 }
