--- a/public/additional_styles.css
+++ b/public/additional_styles.css
@@ -19,7 +19,8 @@ border: thin red solid;
   background: url("main-hero.jpg")
   no-repeat center center;
   background-size: cover;
-  height: 300px;
+  height: 400px;
+  vertical-align: middle;
 }
 button {
   background-color: rgb(0,120,229);
@@ -47,7 +48,7 @@ body {
   background: url("download-hero.jpg")
   no-repeat center center;
   background-size: cover;
-  height: 300px;
+  height: 400px;
 }
 .app-badge-images {
   width: 200px;
@@ -76,7 +77,148 @@ body {
   margin-bottom: 10px;
 }
 
+
 .navbar {
   background-color: rgb(246,52,64);
+  vertical-align: middle;
+}
+
+.navbar a {
+  color: white !important;
+  text-decoration: none;
+}
+
+.navbar-brand {
+  font-family: "Passion One";
+  font-size: xx-large;
+}
+
+/* Utility */
+
+.round-image {
+  border-radius: 50%;
+}
+
+.centered {
+  text-align: center;
+}
+
+.tagline {
+  font-size: 22px;
+}
+/* Buttons */
+
+.primary-button {
+  background-color: rgb(0,126,229);
+  width: 200px;
   color: white;
+  border-radius: 5px;
+  height: 40px;
+  transition: all 0.2s ease-in-out;
+}
+
+.primary-button:hover {
+  background-color: rgb(0, 65, 117);
+}
+/* Miscellaneous */
+
+.spotlight-image {
+  width: 200px;
+}
+
+.user-image {
+  width: 50px;
+}
+
+.store-badge {
+  width: 200px;
+}
+.h4-footer  {
+  color: white;
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.li-footer {
+  color: white;
+  margin-bottom: 10px;
+}
+
+/* My standard vertical spacing classes */
+
+.padding-inside-top-xs {
+  padding-top: 10px;
+}
+
+.padding-inside-top-sm {
+  padding-top: 20px;
+}
+
+.padding-inside-top-md {
+  padding-top: 50px;
+}
+
+.padding-inside-top-lg {
+  padding-top: 150px;
+}
+
+.padding-inside-top-xl {
+  padding-top: 200px;
+}
+
+.padding-inside-bottom-xs {
+  padding-bottom: 10px;
+}
+
+.padding-inside-bottom-sm {
+  padding-bottom: 20px;
+}
+
+.padding-inside-bottom-md {
+  padding-bottom: 50px;
+}
+
+.padding-inside-bottom-lg {
+  padding-bottom: 150px;
+}
+
+.padding-inside-bottom-xl {
+  padding-bottom: 200px;
+}
+
+.margin-above-top-xs {
+  margin-top: 10px;
+}
+
+.margin-above-top-sm {
+  margin-top: 20px;
+}
+
+.margin-above-top-md {
+  margin-top: 50px;
+}
+
+.margin-above-top-lg {
+  margin-top: 150px;
+}
+
+.margin-below-bottom-xs {
+  margin-bottom: 10px;
+}
+
+.margin-below-bottom-sm {
+  margin-bottom: 20px;
+}
+
+.margin-below-bottom-md {
+  margin-bottom: 50px;
+}
+
+.margin-below-bottom-lg {
+  margin-bottom: 150px;
+}
+
+.margin-below-bottom-xl {
+  margin-bottom: 200px;
 }
